--- a/App.css
+++ b/App.css
@@ -9,28 +9,45 @@ html {
   box-sizing: inherit;
 }
 
-table {
-  border: 1px solid #000000;
-  border-collapse: collapse;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-thead {
-  text-align: center
-}
-
 th {
   border: 1px solid #000000;
   border-collapse: collapse;
   text-align: center
 }
 
-.mdc-data-table__cell {
+.expenses-table-t {
+  width: 10%;
   border: 1px solid #000000;
   border-collapse: collapse;
-  top: 50%;
+  position: absolute;
+  top: 10%;
   left: 50%;
+  transform: translate(-50%, -50%);
 }
+
+.income-table-t {
+  width: 10%;
+  border: 1px solid #000000;
+  border-collapse: collapse;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  transform: translate(-50%, -50%);
+}
+
+.total-income {
+  border: 1px solid #000000;
+  border-collapse: collapse;
+  position: absolute;
+  top: 30%;
+  left: 0%;
+}
+
+.total-expenses {
+  border: 1px solid #000000;
+  border-collapse: collapse;
+  position: absolute;
+  bottom: 10%;
+  left: 0%;
+}
+
