--- a/App.css
+++ b/App.css
@@ -19,6 +19,7 @@ th {
   width: 10%;
   border: 1px solid #000000;
   border-collapse: collapse;
+  border-radius: 5px;
   position: absolute;
   top: 10%;
   left: 50%;
@@ -29,6 +30,7 @@ th {
   width: 10%;
   border: 1px solid #000000;
   border-collapse: collapse;
+  border-radius: 5px;
   position: absolute;
   top: 10%;
   left: 10%;
@@ -38,6 +40,7 @@ th {
 .total-income {
   border: 1px solid #000000;
   border-collapse: collapse;
+  border-radius: 5px;
   position: absolute;
   top: 30%;
   left: 0%;
@@ -46,6 +49,7 @@ th {
 .total-expenses {
   border: 1px solid #000000;
   border-collapse: collapse;
+  border-radius: 5px;
   position: absolute;
   bottom: 10%;
   left: 0%;
