--- a/src/App.css
+++ b/src/App.css
@@ -10,42 +10,59 @@ html {
 }
 
 th {
-  border: 1px solid #000000;
+  border: 1px solid #6f6f6f;
   border-collapse: collapse;
+  background:rgb(255, 229, 135);
   text-align: center
 }
 
-.grid-container {
-  display: inline-grid;
-  grid-template-columns: 33% 67%;
+.screen {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 20px;
+  gap: 20px;
+}
+
+.left-grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
   width: 100%;
-  background-color: #ffffff;
-  padding: 10px;
+  gap: 20px;
+}
+
+.right-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
 }
 
 .expenses-table-t {
-  width: 100%;
-  border: 1px solid #000000;
+  width: 50%;
+  border: 1px solid #6f6f6f;
   border-collapse: collapse;
+  background:rgb(255, 229, 135);
 }
 
 .income-table-t {
   width: 100%;
-  border: 1px solid #000000;
+  border: 1px solid #6f6f6f;
   border-collapse: collapse;
+  background:rgb(255, 229, 135);
 }
 
 .total-income {
-  border: 1px solid #000000;
+  border: 1px solid #6f6f6f;
   border-collapse: collapse;
+  background:rgb(255, 229, 135);
 }
 
 .total-expenses {
-  border: 1px solid #000000;
+  border: 1px solid #6f6f6f;
   border-collapse: collapse;
+  background:rgb(255, 229, 135);
 }
 
 .categories {
-  border: 1px solid #000000;
+  border: 1px solid #6f6f6f;
   border-collapse: collapse;
 }
