--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html {
-  font-size: 100%;
+  font-size: 95%;
   color:rgb(47, 47, 47);
+  letter-spacing: 0.5px;
   box-sizing: border-box;
 }
 
@@ -10,15 +11,15 @@ html {
   box-sizing: inherit;
 }
 
-th, td, tr, table {
-  border: 2px solid rgb(255, 225, 187);
-  border-style: ridge;
-  border-collapse: collapse;
-  text-align: center
+table {
+  box-shadow: 0px 0.5px 2px rgb(167, 167, 167);
 }
 
-.expenses-table, .income-table {
-  
+th, td, tr, table {
+  font-family: Helvetica, Arial, sans-serif;
+  border: 2px inset rgb(255, 238, 216);
+  border-collapse: collapse;
+  text-align: center
 }
 
 .screen {
@@ -48,8 +49,6 @@ th, td, tr, table {
 
 .total-income, .total-expenses, .categories {
   width: 50%;
-  border: 1px solid #6f6f6f;
-  border-collapse: collapse;
   background:rgb(255, 207, 149);
   text-align: center
 }
