--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@ footer {
   color:rgb(47, 47, 47);
   letter-spacing: 0.75px;
   width: 75%;
+  height:75%;
   border: 2px ridge rgb(255, 238, 216);
   background:rgb(177, 177, 177);
   text-align: center
